# ising_project

./: .gitignore  Book.xlsx  CMakeLists.txt  Makefile  README.md  data_magn_H  debug.cpp  debug.h  funcs.cpp  funcs.cpp.autosave  funcs.h  ising.cpp  ising.cpp.save  ising_draw.pro  ising_model.cpp  ising_model.h  lattice.cpp  lattice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  paintwidget.h  worker.cpp  worker.h
TX/: TXLib.h
src/: debug.cpp  debug.h  funcs.cpp  funcs.h  ising_draw.pro  ising_model.cpp  ising_model.h  lattice.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  worker.cpp  worker.h
src/hdr/: debug.h  funcs.h  ising_model.h  lattice.h  mainwindow.h  paintwidget.h  worker.h
